--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<main>
 		<h3>M2A4</h3>
 		<div class="a4">
-		<img src="images/Сша1.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша1.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>Light Tank M2 — американский лёгкий танк, разработанный в начале 40-х годов Рок-Айлендским арсеналом. Первая, однобашенная версия данной машины из-за обнаруженных 
 		недостатков в компоновке была довольно быстро заменена в производстве на двухбашенные модели M2A2 и M2A3. Однако позже, на основе уроков танковых боёв гражданской войны в 
@@ -29,7 +29,7 @@
 		ярко выраженных слабых сторон, благодаря чему его с уверенностью можно назвать универсальной машиной, способной выполнять любые задачи на поле боя.</p>
 		<h3>M2</h3>
 		<div class="a4">
-		<img src="images/Сша2.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша2.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>Medium Tank M2 — американский средний танк, разработанный в конце 1930-х годов Рок-Айлендским арсеналом. История разработки M2 берёт своё начало 19 мая 1936 года, когда
 		Комитет по вооружениям запустил программу Medium Tank T5, ставящую своей целью создание среднего танка для армии США. За основу будущей машины был взят лёгкий танк M2, у 
@@ -42,7 +42,7 @@
 		наводиться на цель. Несмотря на это, M2 весьма универсален и может хорошо показывать себя как в наступлении, так и в обороне.</p>
 		<h3>M3А1 Stuart</h3>
 		<div class="a4">
-		<img src="images/Сша3.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша3.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>M3A1 Stuart — модификация американского лёгкого танка M3 Stuart, была запущена в серийное производство в мае 1942 года. В данной версии были исправлены многие недостатки
 		базовой машины: так, клёпанная башня была заменена на сварную с возможностью установки забашенной корзины, пушка M5 была заменена на M6 с более совершенной системой отдачи
@@ -52,7 +52,7 @@
 		любую роль на поле боя. При этом по меркам своего типа он очень высокий, плохо разворачивается на месте, а плотная компоновка экипажа даёт ему плохую живучесть.</p>
 		<h3>M3 Stuart</h3>
 		<div class="a4">
-		<img src="images/Сша4.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша4.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>На фоне быстрого падения Франции в 1940 году американская армия решила срочно пересмотреть свою доктрину применения танков. Теперь «кавалерийские танки» были 
 		переквалифицированы в лёгкие и должны были бороться не только с пехотой, но и бронетехникой противника. Для этого танку требовалась хорошая броня, защищающая хотя бы от 
@@ -65,7 +65,7 @@
 		этом по меркам своего типа он очень высокий, плохо разворачивается на месте, а плотная компоновка экипажа даёт ему плохую живучесть.</p>
 		<h3>M22</h3>
 		<div class="a4">
-		<img src="images/Сша5.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша5.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>M22 Locust (с англ. «Саранча») — американский лёгкий аэромобильный танк периода Второй мировой войны. История разработки данного танка берёт своё начало 22 мая 1941 года
 		, когда американская армия оформила спецификацию на создание авиадесантного танка с индексом T9 Airborne Tank. Разработка была поручена сразу нескольким фирмам: United 
@@ -80,7 +80,7 @@
 		танке агрессивный стиль игры.</p>
 		<h3>LVT(A)(1)</h3>
 		<div class="a4">
-		<img src="images/Сша6.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша6.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>LVT(A)(1) — американская десантная машина периода Второй мировой войны, разработанный в начале 1940-х годов компанией FMC. С точки зрения конструкции представляла собой
 		модернизированный плавающий транспортёр LVT2, главным отличием от которого являлась установка несколько изменённой башни от лёгкого танка M3 Stuart. LVT(A)(1) был принят на
@@ -91,7 +91,7 @@
 		танком, который позволяет успешно реализовывать как агрессивные, так и более размеренные тактики боя.</p>
 		<h3>M13 MGMC</h3>
 		<div class="a4">
-		<img src="images/Сша7.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша7.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>M13 MGMC — американская зенитная самоходная установка, разработанная в начале 40-х годов компанией White Motor Company. Причиной её создания стала потребность 
 		американской армии в защите своих колонн от вражеской авиации во время марша. Решение данной проблемы было найдено весьма быстро — на проверенное шасси бронетранспортёра 
@@ -103,7 +103,7 @@
 		Однако, подставляться под огонь при этом лишний раз не стоит, так как машина обладает слабым бронированием и низкой живучестью.</p>
 		<h3>M15 CGMC</h3>
 		<div class="a4">
-		<img src="images/Сша8.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша8.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>M15 Combination Gun Motor Carriage — американская зенитная самоходная установка. Создание новой ЗСУ для бронетанковых частей армии США началось компанией White Motor 
 		Company в начале 1940-х годов. Уже в 1942 году для испытаний был изготовлен её прототип под индексом T28: это был бронетранспортёр M2 half-track с установленным 37-мм 
@@ -115,7 +115,7 @@
 		пушка позволяет бороться и со многими танками противника. Тем не менее, M15 CGMC, как и практически любая другая ЗСУ, обладает слабой бронезащитой и низкой живучестью.</p>
 		<h3>M2А2</h3>
 		<div class="a4">
-		<img src="images/Сша9.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша9.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>Light Tank M2 — американский лёгкий танк межвоенного периода, разработанный в начале 40-х годов Рок-Айлендским арсеналом. После начала серийного производства в 1935 году
 		его первой версии — M2A1 — быстро вскрылся её существенный недостаток: высокое расположение вала от двигателя к трансмиссии мешало экипажу в башне при её повороте, из-за 
@@ -129,7 +129,7 @@
 		</p>
 		<h3>M8 HMC</h3>
 		<div class="a4">
-		<img src="images/Сша10.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша10.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>M8 Howitzer Motor Carriage — американская самоходная артиллерийская установка, разработанная в начале 1940-х годов Департаментом вооружений США. M8 HMC появился на свет 
 		в результате нужды американской армии в лёгкой САУ для поддержки пехоты. Установив башню с 75-мм гаубицей на шасси распространённого в войсках лёгкого танка M5A1, 
@@ -141,7 +141,7 @@
 		особенностей M8 HMC хорошо подходит для поддержки союзников на поле боя или для осторожных позиционных тактик.</p>
 		<h3>M3 GMC</h3>
 		<div class="a4">
-		<img src="images/Сша11.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша11.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>M3 Gun Motor Carriage — американский истребитель танков, разработанный в начале 1940-х годов Департаментом вооружений США. По результатам майского блицкрига Вермахта 
 		1940 года американские военные пришли к неутешительным выводам: армия США располагала уже неактуальными на то время буксируемыми 37-мм противотанковыми пушками M3, которые
@@ -156,7 +156,7 @@
 		подходит для боёв на дальней дистанции или для игры от второй линии.</p>
 		<h3>M2A4(1st Arm.Div.)</h3>
 		<div class="a4">
-		<img src="images/Сша12.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша12.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>Light Tank M2 — американский лёгкий танк, разработанный в начале 40-х годов Рок-Айлендским арсеналом. Первая, однобашенная версия данной машины из-за обнаруженных 
 		недостатков в компоновке была довольно быстро заменена в производстве на двухбашенные модели M2A2 и M2A3. Однако позже, на основе уроков танковых боёв гражданской войны в 
@@ -171,7 +171,7 @@
 		универсальной машиной, способной выполнять любые задачи на поле боя.</p>
 		<h3>M3A1 (USMC)</h3>
 		<div class="a4">
-		<img src="images/Сша13.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша13.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>M3A1 Stuart — модификация американского лёгкого танка M3 Stuart, была запущена в серийное производство в мае 1942 года. В данной версии были исправлены многие недостатки
 		базовой машины: так, клёпанная башня была заменена на сварную с возможностью установки забашенной корзины, пушка M5 была заменена на M6 с более совершенной системой отдачи
@@ -182,7 +182,7 @@
 		очень высокий, плохо разворачивается на месте, а плотная компоновка экипажа даёт ему плохую живучесть.</p>
 		<h3>LVT(A)(1)</h3>
 		<div class="a4">
-		<img src="images/Сша14.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша14.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>LVT(A)(1) — американская десантная машина периода Второй мировой войны, разработанный в начале 1940-х годов компанией FMC. С точки зрения конструкции представляла собой 
 		модернизированный плавающий транспортёр LVT2, главным отличием от которого являлась установка несколько изменённой башни от лёгкого танка M3 Stuart. LVT(A)(1) был принят на
@@ -194,7 +194,7 @@
 		боя.</p>
 		<h3>LVT(A)(4)</h3>
 		<div class="a4">
-		<img src="images/Сша15.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша15.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>LVT(A)(4) — американский плавающий танк времён Второй мировой войны, созданный на базе LVT-2. Ещё в ходе разработки LVT(A)(1) стала заметна слабость 37-мм пушки, которая
 		с трудом справлялась с бункерами и укреплёнными позициями, не оказывая пехоте достаточной огневой поддержки. Для исправления этого примерно в 1942 году Корпус морской 
@@ -207,7 +207,7 @@
 		M2, пробивающего множество других легкобронированных машин.</p>
 		<h3>M8 LAC</h3>
 		<div class="a4">
-		<img src="images/Сша.webp" alt="Наземная Техника США в WarTunder">
+		<img src="Сша.webp" alt="Наземная Техника США в WarTunder">
 		</div>
 		<p>M8 Greyhound — американский лёгкий разведывательный бронеавтомобиль периода Второй Мировой войны. Был разработан фирмой «Ford» в 1941–1942 году по заказу 
 		Противотанкового управления США. Бронемашина предназначалась для разведывательных подразделений армии США на замену устаревшему бронеавтомобилю M3. Серийно выпускался с 
