--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 		к неплохой 37-мм пушке машина оснащена ещё и 12,7-мм пулемётом M2HB, который запросто пробивает множество встречаемых легкобронированных противников.</p>
 		</main>
 		<footer>
-		<h2>Возращение Главную Страницу:</h2><a href="file:///C:/Users/72248/OneDrive/%D0%A0%D0%B0%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D0%BE%D0%BB/%D0%92%D0%B5%D0%B1-%D0%BF%D1%80%D0%BE%D0%B3%D1%80%D0%B0%D0%BC%D0%BC%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5/%D0%92%D1%81%D0%B5%20%D0%BD%D0%B0%D1%86%D0%B8%D0%B8.html">
+		<h2>Возращение Главную Страницу:</h2><a href="https://sasha90712.github.io/All-Nations/">
 		</footer>
 	</body>
 </html>
