--- a/index.html
+++ b/index.html
@@ -221,9 +221,10 @@
 		</div>
 		</div>
 		<footer>
-		<h2>Возращение Главную Страницу:</h2><a href="https://sasha90712.github.io/All-Nations/">
+		<h2>Возращение Главную Страницу:</h2><a href="https://sasha90712.github.io/USA/">
 		</footer>
 	</body>
 </html>
+
 
 
