--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+	<div id="fa"><a href="https://sasha90712.github.io/All-vehiches/"><img src="Иконка2.png"  alt="Корабли Техника СССР в WarTunder"><p> Техника Всех Стихий</p></a></div>
 		<h1>Наземная Техника</h1>
 		<div class="a1">
 		<div id="a2">
@@ -225,6 +226,7 @@
 		</footer>
 	</body>
 </html>
+
 
 
 
