--- a/index.html
+++ b/index.html
@@ -222,10 +222,11 @@
 		</div>
 		</div>
 		<footer>
-		<a href="https://sasha90712.github.io/All-Hations/"><p>Возращение Главную Страницу</p>
+		<a href="https://sasha90712.github.io/All-Nations/"><p>Возращение Главную Страницу</p>
 		</footer>
 	</body>
 </html>
+
 
 
 
