--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-	<div class="a8"><a href="https://sasha90712.github.io/All-vehiches/"><img src="Иконка2.png"  alt="Корабли Техника СССР в WarTunder"><p> Техника Всех Стихий</p></a></div>
+	<div class="a8"><div><a href="https://sasha90712.github.io/All-vehiches/"><img src="Иконка2.png"> alt="Корабли Техника СССР в WarTunder"></div><div><p> Техника Всех Стихий</p></div></a></div>
 		<h1>Наземная Техника</h1>
 		<div class="a1">
 		<div id="a2">
@@ -18,8 +18,6 @@
 		сражениях в War Thunder!Танки США на 1 ранге представляют:М2А4,М2,М3А1 Stuart,М3 Stuart,М22,LVT(A)(1),М13 MGMC,M15 CGMC,M2A2,M8 HMC,M3 GMC.Премиум Машины:M2A4 
 		(1st Arm.Div.),M3A1 (USMC),LVT(A)(1),LVT(A)(4),M8 LAC.
 		</p>
-		</header>
-		<main>
 		<h3>M2A4</h3>
 		<div class="a4">
 		<img src="Сша1.webp" alt="Наземная Техника США в WarTunder">
@@ -218,14 +216,12 @@
 		проведения разведки местности и боевого патрулирования.В игру M8 Greyhound был добавлен в качестве приза события в честь пятилетия War Thunder в 2017 году. Бронемашина не 
 		сможет похвастаться хорошим бронированием или особо мощным вооружением, однако, является одной из самых быстрых и мобильных машин первого ранга. Кроме того, в дополнении
 		к неплохой 37-мм пушке машина оснащена ещё и 12,7-мм пулемётом M2HB, который запросто пробивает множество встречаемых легкобронированных противников.</p>
-		</main>
 		</div>
 		</div>
-		<footer>
 		<a href="https://sasha90712.github.io/All-Nations/"><p>Возращение Главную Страницу</p>
-		</footer>
 	</body>
 </html>
+
 
 
 
