--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 	<div class="a8">
 	<div><a href="https://sasha90712.github.io/All-vehiches/">
-	<img src="Иконка2.png" alt="Корабли Техника СССР в WarTunder"></div>
-	<div><p> Техника Всех Стихий</p></a></div></div>
+	<img src="Иконка2.png" alt="Корабли Техника СССР в WarTunder"></a></div>
+	<div><a href="https://sasha90712.github.io/All-vehiches/"><p>Техника Всех Стихий</p></a></div></div>
 		<h1>Наземная Техника</h1>
 		<div class="a1">
 		<div id="a2">
@@ -224,6 +224,7 @@
 		<a href="https://sasha90712.github.io/All-Nations/"><p>Возращение Главную Страницу</p>
 	</body>
 </html>
+
 
 
 
